# narwhal

./: .gitignore  Cargo.toml  QUORUM_EXPLANATION.md  README.md  build_and_run.sh  docs.md  kill.sh  kill_node_id.sh  note.md  run.md  run.sh  run_clients.sh  run_node_id.sh  run_nodes.sh  setup.sh  start_validator_proxy.py
benchmark/: fabfile.py  requirements.txt  settings.json
benchmark/benchmark/: agent.py  commands.py  config.py  local.py  logs.py  remote.py
config/: Cargo.toml
config/src/: lib.rs
consensus/: Cargo.toml
consensus/src/: lib.rs
consensus/src/tests/: consensus_tests.rs
crypto/: Cargo.toml
crypto/src/: lib.rs
crypto/src/tests/: crypto_tests.rs
docs/: BLOCK_SENDING_LOGIC.md
executor/: Cargo.toml
executor/src/: batch_loader.rs  core.rs  lib.rs  transaction.rs
go/: go.mod  go.sum
go/cmd/client/: main.go  sendLoop.go
go/cmd/executor/: main.go
go/cmd/exetps/: main.go
go/cmd/tx_listener/: tx_listener.go
go/cmd/tx_listener_one/: tx_listener.go
go/pkg/bls/: bls.go  bls_test.go  key_pair.go  key_pair_test.go  output.txt
go/pkg/bls/blst/bindings/go/: blst.go
go/pkg/common/: color_text.go  command.go  common.go  connection_type.go  constant.go  encoding.go  extension_sc_address.go  native_sc_address.go  utilities.go  utilities_test.go
go/pkg/executor/: listener.go
go/pkg/logger/: logger.go  logger_test.go
go/pkg/network/: circuit_breaker.go  config.go  connection.go  connections_manager.go  handler.go  message.go  message_sender.go  request.go  server.go
go/pkg/proto/: executor.pb.go  executor.proto
go/pkg/txsender/: sender.go
go/types/: block.go  config.go  entry.go  event_log.go  last_device_key.go  pack.go  receipt.go  smart_contract.go  state.go  state_db.go  transaction.go  vote.go
go/types/network/: connection.go  connection_manager.go  handler.go  message.go  message_sender.go  request.go  server.go
hotstuff/: Cargo.toml
hotstuff/src/: committer.rs
hotstuff/src/tests/: common.rs  consensus_tests.rs  core_tests.rs  helper_tests.rs  synchronizer_tests.rs
myNote/: dutyPrimary.md  note.md  role3Rule.md  text.md
network/: Cargo.toml
network/src/: error.rs  lib.rs  quic.rs  receiver.rs  reliable_sender.rs  simple_sender.rs  tcp.rs  transport.rs
network/src/tests/: common.rs  receiver_tests.rs  reliable_sender_tests.rs  simple_sender_tests.rs
node/: Cargo.toml  build.rs
node/proto/: comm.proto  validator.proto
node/src/: benchmark_client.rs  main.rs  metrics.rs  state_syncer.rs
primary/: Cargo.toml
primary/src/: aggregators.rs  certificate_waiter.rs  core.rs  error.rs  garbage_collector.rs  header_waiter.rs  helper.rs  lib.rs  messages.rs  payload_receiver.rs  primary.rs  proposer.rs  synchronizer.rs
primary/src/tests/: common.rs  core_tests.rs  proposer_tests.rs
store/: Cargo.toml
store/src/: lib.rs
worker/: Cargo.toml
worker/src/: batch_maker.rs  helper.rs  lib.rs  metrics.rs  primary_connector.rs  processor.rs  quorum_waiter.rs  synchronizer.rs  worker.rs
worker/src/tests/: common.rs  helper_tests.rs  processor_tests.rs  quorum_waiter_tests.rs  synchronizer_tests.rs  worker_tests.rs
