[package]
name = "config"
version = "0.1.0"
authors = ["Alberto Sonnino <asonnino@fb.com>"]
edition = "2018"


[dependencies]
serde = { version = "1.0.144", features = ["derive"] }
thiserror = "1.0.24"
serde_json = "1.0.64"
log = "0.4.14"
multiaddr = "0.14.0"
rand = { version = "0.8", features = ["std"] }

crypto = { path = "../crypto" }