[package]
name = "consensus"
version = "0.1.0"
authors = ["Alberto Sonnino <asonnino@fb.com>"]
edition = "2018"

[dependencies]
tokio = { version = "1.5.0", features = ["sync"] }
log = "0.4.14"
tracing = "0.1.36"


# Thêm các dòng sau
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3.3"
store = { path = "../store" }


crypto = { path = "../crypto" }
config = { path = "../config" }
primary = { path = "../primary" }

[dev-dependencies]
rand = "0.7.3"

[features]
benchmark = []