[package]
name = "consensus"
version = "0.1.0"
authors = ["Mysten Labs <build@mystenlabs.com>"]
edition = "2021" # Nên nâng lên edition 2021 cho các dự án mới

[dependencies]
# --- Các thư viện từ Crates.io ---
tokio = { version = "1.0", features = ["full"] }
log = "0.4.14"
tracing = "0.1.36"
serde = { version = "1.0.144", features = ["derive"] }
bincode = "1.3.3"
thiserror = "1.0"
metrics = "0.22"

# --- Các thư viện cục bộ (local path) ---
store = { path = "../store" }
crypto = { path = "../crypto" }
config = { path = "../config" }
primary = { path = "../primary" }

[dev-dependencies]
rand = "0.8.5"

[features]
benchmark = []