[package]
name = "crypto"
version = "0.1.0"
authors = ["Alberto Sonnino <alberto@sonnino.com>"]
edition = "2018"
publish = false

[dependencies]
tokio = { version = "1.5.0", features = ["sync", "rt", "macros"] }

# Cập nhật fastcrypto để kích hoạt các tính năng secp256k1 và recoverable
fastcrypto = { git = "https://github.com/MystenLabs/fastcrypto.git", branch = "main"}

# Thêm sha3 để sử dụng Keccak-256
sha3 = "0.10.6"

serde = { version = "1.0", features = ["derive"] }
rand = { version = "0.8", features = ["std"] }
base64 = "0.13.0"