[package]
name = "crypto"
version = "0.1.0"
authors = ["Alberto Sonnino <alberto@sonnino.com>"]
edition = "2018"
publish = false

[dependencies]
tokio = { version = "1.5.0", features = ["sync", "rt", "macros"] }

fastcrypto = { git = "https://github.com/MystenLabs/fastcrypto.git", branch = "main"}
sha3 = "0.10.6"

serde = { version = "1.0", features = ["derive"] }
rand = { version = "0.8", features = ["std"] }
base64 = "0.13.0"

# --- PHẦN CẬP NHẬT ---
# Thêm feature "arithmetic" để có thể giải nén public key
k256 = { version = "0.13.1", features = ["ecdsa", "arithmetic"] }
hex = "0.4.3"