[package]
name = "executor"
version = "0.1.0"
edition = "2021"


[dependencies]
serde = { version = "1.0.147", features = ["derive"] }
ed25519-dalek = "1.0.1"
tokio = { version = "1.5.0", features = ["sync", "rt", "macros"] }
futures = "0.3.6"
bincode = "1.3.3"
bytes = "1.2.1"

config = { path = "../config" }
crypto = { path = "../crypto" }
store = { path = "../store" }
network = { path = "../network" }
primary = { path = "../primary" }
worker = { path = "../worker" }