[package]
name = "primary"
version = "0.1.0"
authors = ["Libra <oncall+libra@xmail.facebook.com>"]
publish = false
edition = "2018"

[dependencies]
futures = "0.3.6"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.5.0", features = ["sync", "rt", "macros"] }
tokio-util = { version = "0.6.2", features= ["codec"] }
thiserror = "1.0.20"
bincode = "1.3.1"
bytes = "1.0.1"
env_logger = "0.7.1"
log = "0.4.11"
async-recursion = "0.3.2"
async-trait = "0.1.50"
anyhow = "1.0"
sha2 = "0.10.6"

crypto = { path = "../crypto" }
store = { path = "../store" }
config = { path = "../config" }
network = { path = "../network" }
dashmap = "6.1.0"

[dev-dependencies]
rand = { version = "0.8", features = ["std"] }

[features]
benchmark = []