[package]
name = "worker"
version = "0.1.0"
authors = ["Alberto Sonnino <asonnino@fb.com>"]
edition = "2018"

[dependencies]
tokio = { version = "1.5.0", features = ["sync", "rt", "macros"] }
tokio-util = { version = "0.6.2", features= ["codec"] }
serde = { version = "1.0.144", features = ["derive"] }
bytes = "1.0.1"
log = "0.4.14"
bincode = "1.3.3"
futures = "0.3.14"
async-trait = "0.1.50"
env_logger = "0.7.1"
sha2 = "0.10.6"

crypto = { path = "../crypto" }
store = { path = "../store" }
config = { path = "../config" }
network = { path = "../network" }
primary = { path = "../primary" }

[dev-dependencies]
rand = { version = "0.8", features = ["std"] }

[features]
benchmark = []
